test/CheckError/Class/DuplicateClass.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() { }

// CHECK: .loci:8:1: error: type 'TestClass' clashes with existing name
// CHECK: .loci:4:1: note: because: previously defined here
class TestClass() { }

// CHECK: 1 error generated.
